# rextio-lsp

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/rextio_lsp/: __about__.py  __init__.py  __main__.py  contract.py  discovery.py  engine.py  server.py
tests/: conftest.py  test_contract.py  test_discovery.py  test_engine.py  test_integration.py  test_server.py
tests/fixtures/: capabilities_boundary.json  check_boundary.json  check_pure_math.json  check_syntax_error.json
