[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "rextio-lsp"
dynamic = ["version"]
description = "Language Server for the Rextio native-promotion tooling contract."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "Steve Si-young Song", email = "rextio.co@gmail.com"}
]
keywords = ["python", "rust", "lsp", "language-server", "rextio"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
]
# rextio is deliberately NOT a dependency: the server consumes rextio's JSON
# contract (in-process import when co-installed, else a discovered subprocess).
dependencies = [
  "pygls>=2.1,<3",
]

[project.urls]
Homepage = "https://github.com/rextio/rextio-lsp"
Repository = "https://github.com/rextio/rextio-lsp"
Issues = "https://github.com/rextio/rextio-lsp/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.15",
  "mypy>=1.11",
]

[project.scripts]
rextio-lsp = "rextio_lsp.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "rextio_lsp.__about__.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "needs_rextio: integration test that requires a real, importable rextio",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# Mirror rextio core's bootstrap set: E/W pycodestyle, F pyflakes, D pydocstyle.
select = ["E", "W", "F", "D"]
ignore = [
    "E501",  # line length deferred to the formatter
    "D105",  # undocumented magic method
    "D107",  # undocumented public __init__
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
